# accounting-system

./: .gitignore  Account.cpp  Account.h  BankAccount.cpp  BankAccount.h  Budget.cpp  Budget.h  CMakeLists.txt  CashAccount.cpp  CashAccount.h  Category.cpp  Category.h  CategoryReport.cpp  CategoryReport.h  CheckingAccount.cpp  CheckingAccount.h  ExpenseTransaction.cpp  FIX_PLAN.md  HANDOFF.md  ISSUES.md  IncomeTransaction.cpp  IncomeTransaction.h  MonthlyReport.cpp  MonthlyReport.h  Report.cpp  Report.h  SavingAccount.cpp  SavingsAccount.h  constants.h  main.cpp  transaction.cpp  transaction.h
core/: AccountingSystem.cpp  AccountingSystem.h  Budget.h  Category.cpp  Category.h  Customer.cpp  Customer.h  Invoice.cpp  Invoice.h  Payment.cpp  Payment.h  Product.cpp  Product.h  Supplier.cpp  Supplier.h  budget.cpp
src/ui/app/: GlobalToolBar.cpp  GlobalToolBar.h  MainWindow.cpp  MainWindow.h  NavigationPanel.cpp  NavigationPanel.h  PageHeader.cpp  PageHeader.h  PageRouter.cpp  PageRouter.h
src/ui/common/: UiTypes.h
src/ui/dialogs/: CustomerEditorDialog.cpp  CustomerEditorDialog.h  InvoiceEditorDialog.cpp  InvoiceEditorDialog.h  PaymentEditorDialog.cpp  PaymentEditorDialog.h  ProductEditorDialog.cpp  ProductEditorDialog.h  SupplierEditorDialog.cpp  SupplierEditorDialog.h
src/ui/models/: CustomerTableModel.cpp  CustomerTableModel.h  (+8 more)
storage/: AccountRepository.h  BinaryRecordFile.h  BudgetRepository.h  CategoryRepository.h  CustomerRepository.h  InvoiceRepository.h  PaymentRepository.h  ProductRepository.h  StorageService.h  SupplierRepository.h  TransactionRepositories.h
transaction/: ExpenseTransaction.cpp  ExpenseTransaction.h  IncomeTransaction.cpp  IncomeTransaction.h  RecurringExpense.cpp  RecurringExpense.h  RecurringIncome.cpp  RecurringIncome.h  transaction.cpp  transaction.h  transaction_cpp_design.md
(+54 files in other folders)
